src/app/home/theme-list/theme-list.component.scss
.center {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 24px;
}

.theme-list {
    display: flex;
    flex-wrap: wrap;
    padding: 24px;
    justify-content: center;    
}

.theme-list-item {
    &,
    &:active,
    &:hover,
    &:focus {
        text-decoration: none;
    }
    & {
        color: white;
    }
}

.theme-card {
    margin: 16px;
    width: 320px;
}

